--- a/installjava.yml
+++ b/installjava.yml
@@ -4,7 +4,7 @@
   tasks:
   - name: install java on ubuntu
     apt:
-     name: "{{myjavapackonredhat}}"
+     name: "{{myjavapackonubuntu}}"
      state: present
     when: ansible_os_family=="Debian"
   - name: install java on RedHat
