--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -2,8 +2,7 @@
 - hosts: 172.31.15.98
   become: yes
   tasks: 
-  - name: create a file
-    file:
-     path: /home/ubuntu/mytextfile
-     state: touch
+  - include_tasks: myfile.yml
+
+ 
      
