--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -3,6 +3,10 @@
   become: yes
   tasks: 
   - include_tasks: myfile.yml
+  - name: create a myfolder
+    file:
+     path: /home/ubuntu/myfolder
+     state: directory
 
  
      
