--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -15,5 +15,9 @@
     apt:
      name: apache2
      state: present
+  - name: copy dynamic file into  side
+    template:
+     src: myindex.j2
+     dest: /var/www/html/index.html
  
      
