--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -24,5 +24,9 @@
     template:
      src: myindex.j2
      dest: /var/www/html/index.html
- 
-     
+     notify: restartwebserver
+     handlers:
+  - name: restartwebserver
+    service:
+       name: apache2
+       state: restarted
