--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -25,4 +25,9 @@
      src: myindex.j2
      dest: /var/www/html/index.html
      
-     
+     notify: restartwebserver
+  handlers:
+  - name: restartwebserver
+    service:
+       name: apache2
+       state: restarted
