--- a/mytomrole/tasks/main.yml
+++ b/mytomrole/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 # tasks file for mytomrole
+- include_tasks: user.yml
+- include_tasks: installjava.yml
+- include_tasks: download.yml
+- include_tasks: permission.yml
+- include_tasks: tomcatdashbord.yml
+- include_tasks: topcatstart.yml
