--- a/mytomrole/tasks/download.yml
+++ b/mytomrole/tasks/download.yml
@@ -4,7 +4,7 @@
     url: https://archive.apache.org/dist/tomcat/tomcat-10/v10.0.20/bin/apache-tomcat-10.0.20.tar.gz
     dest: /home/ubuntu/apache-tomcat-10.0.20.tar.gz
     force_basic_auth: yes
-- nmae: create a folder
+- name: create a folder
   file:
    path: /opt/tomcat
    state: directory
