--- a/mytomrole/tasks/permission.yml
+++ b/mytomrole/tasks/permission.yml
@@ -1,5 +1,5 @@
 ---
 - name: grant tomcat ownership
   command: sudo chown -R tomcat:tomcat /opt/tomcat/
-- nmae: grant execute permission on bin folder
+- name: grant execute permission on bin folder
   command: sudo chmod -R u+x /opt/tomcat/bin
