--- a/mytomrole/tasks/tomcatdashbord.yml
+++ b/mytomrole/tasks/tomcatdashbord.yml
@@ -1,21 +1,22 @@
+
 ---
-- name: copy tomcat-user file into ansible node side
-  template:
-   src: templates/tomcatuser.j2
-   dest: /opt/tomcat/conf/tomcat-users.xml
-   
+- name: copy  tomcat-user file into ansible node side
+  template: 
+     src: templates/mytomuser.j2
+     dest: /opt/tomcat/conf/tomcat-users.xml
 
 - name: copy context file into node side
   template:
-   src: templates/mycontext.j2
-   dest: /opt/tomcat/webapps/manager/META-INF/context.xml
-   
-- name: copy host context file into node side
-  template:
-   src: templates/hostcontext.j2
-   dest:  /opt/tomcat/webapps/host-manager/META-INF/context.xml
+      src: templates/mytomcontext.j2
+      dest: /opt/tomcat/webapps/manager/META-INF/context.xml
 
-- name: copy tomcat service file into ansible node side
+- name: copy  host context file into node side4
   template:
-   src: templates/service.j2
-   dest: /etc/systemd/system/tomcat.service
+      src: templates/mytomhostcontext.j2
+      dest: /opt/tomcat/webapps/host-manager/META-INF/context.xml
+
+
+- name: copy tomcat service file into node side
+  template:
+      src: templates/mytomservice.j2
+      dest: /etc/systemd/system/tomcat.service
