--- a/mytomrole/tasks/installjava.yml
+++ b/mytomrole/tasks/installjava.yml
@@ -1,9 +1,10 @@
 ---
+
 - name: update packages
   apt:
     update_cache: yes
 
-- name: install java
+- name: insall java
   apt:
-   name: openjdk-8-jdk
-   state: present
+    name: openjdk-8-jdk
+    state: present
