--- a/mytomrole/tasks/main.yml
+++ b/mytomrole/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for mytomrole
-- include_tasks: user.yml
+- include_tasks: mytomuser.yml
 - include_tasks: installjava.yml
 - include_tasks: download.yml
 - include_tasks: permission.yml
