--- a/mytomrole/tasks/mytomuser.yml
+++ b/mytomrole/tasks/mytomuser.yml
@@ -1,9 +1,7 @@
 ---
 - name: create tomcat user 
-  -user:
-     name: tomcat
-     shell: /bin/false
-     home:  /opt/tomcat
-     state: present 
-
-    
+  user:
+    name: tomcat
+    shell: /bin/false
+    home:  /opt/tomcat
+    state: present 
