--- a/mytomrole/tasks/main.yml
+++ b/mytomrole/tasks/main.yml
@@ -6,4 +6,4 @@
 - include_tasks: permission.yml
 - include_tasks: tomcatdashbord.yml
 - include_tasks: topcatstart.yml
-- include-tasks: deplay.yml
+- include-tasks: deploy.yml
