--- a/myapache.yml
+++ b/myapache.yml
@@ -1,8 +1,8 @@
 ---
-hosts: all
-become: yes 
-tasks:
-- name: install apache2
-  apt:
-   name: apache2
-   state: present
+- hosts: all
+  become: yes 
+  tasks:
+  - name: install apache2
+    apt:
+     name: apache2
+     state: present
