--- a/installjava.yml
+++ b/installjava.yml
@@ -7,9 +7,9 @@
      name: "{{myjavapackonubuntu}}"
      state: present
     when: ansible_os_family=="Debian"
-  - name: install java on RedHat
+  - name: install java on redhat
     yum:
-     name: "{{myjavapackonredhat}}"
+     name: "{{myjavapackonredhats}}"
      state: present
     when: ansible_os_family=="RedHat"
     
