--- a/mytomrole/tasks/deplay.yml
+++ b/mytomrole/tasks/deplay.yml
@@ -1,8 +1,7 @@
 ---
 - name: deploy java application  on prod servers
   get_url:
-    url: http://52.37.94.20:8082/artifactory/testrepo4/com/maha/mahaLogin/5.0/mahaLogin-5.0.war
+    url: https://gameoflife-war-file.s3.amazonaws.com/gameoflife.war
     dest: /opt/tomcat/webapps/
     force_basic_auth: yes
-    url_username: admin
-    url_password: Anji1994@
+    
